--- a/final_project.qmd
+++ b/final_project.qmd
@@ -11,33 +11,33 @@ GitHub repo for this project [https://github.berkeley.edu/ap-kasliwal/ars-dev](h
 
 Our implementation of Adaptive Rejection Sampling, based on the `Gilkis et.al.` is based on the following modular functions;
 
-(a) `construct_envelope` function: Here, we 
+(a) `construct_envelope` function: This function is used to construct an upper bound to the function which we want to sample from. A check is included to ensure that there are at least 3 points, which are required to create an envelope. Note that this function is called only once when we initiate an envelope for the first time, following which we only update the envelope from that point on. 
 
-(b) `update_envelope` function: Here, we 
+(b) `update_envelope` function: Once an envelope is already created, this function performs the task of adding an additional point into the existing envelope by figuring out where it would lie, and then recalculating the slopes and the intercepts after that. 
 
-(c) `construct_squeezing` function: Here, we 
+(c) `construct_squeezing` function: This function creates a lower bound to the given function which we want to sample from - similar to the `construct_envelope` function, but bounding it from the other side. 
 
-(d) `update_squeezing` function: Here, we 
+(d) `update_squeezing` function: This function updates the squeezing function in a similar fashion that the envelope is updated, by calculating the slopes and intercepts that get changed and thereby incorporating the new point.
 
-(e) `calculate_piecewise_linear` function: Here, we 
+(e) `calculate_piecewise_linear` function: Once there is a linear envelope, the sampling process requires us to calculate what the functional value of either the envelope, or the squeezing function would be at a given point on the x-axis. To do so, we implement this function called the `calculate_piecewise_linear` which basically figures out the linear part of the envelope / squeezing function corresponding to a given point, and calculates the functional value using the slope and the intercept of that linear part. 
 
-(f) `sample_piecewise_linear` function: Here, we 
+(f) `sample_piecewise_linear` function: Through this function, we are able to sample from the exponential transformation of the given linear part, the requirement of which majorly stems from working with exponential values instead of pure numerical values in order to avoid any numerical underflow. 
 
-(g) `adaptive_search_domain` function: Here, we 
+(g) `adaptive_search_domain` function: This function figures out the ideal sampling domain by starting from a given point, and taking steps of a specified length to come up with the sampling domain. 
 
-(h) `init_points` function: Here, we 
+(h) `init_points` function: This function calculates the intial points to be used during the sampling process which are offset by a parameter called the `threshold` which is to ensure avoiding any numerical issues when dealing with the computations for the given function. 
 
-(i) `check_overflow_underflow` function: Here, we 
+(i) `check_overflow_underflow` function: Here, we specifcally check to see if there is any potential cause for an overflow or underflow to occur by comparing the numerical values that arise in the computation with the machine epsilon on one end and relative upper bounds for avoiding overflow on the other. 
 
-(j) `h_log` function: Here, we 
+(j) `h_log` function: This function is used to implement caching for the log of the relevant function, and also implements underflow protection to prevent numerical issues during the sampling process. 
 
-(k) `h_cached` function: Here, we 
+(k) `h_cached` function: This function caches h values to avoid recomputing for the same x values, and thus helps reduce computational costs in case some calculations tend to be repeated.
 
-(l) `is_log_concave` function: Here, we 
+(l) `is_log_concave` function: This function is specifically built to check if a given function is log-concave in some particular domain. If not, this throws errors that help the user debug at any relevant point during the sampling process. 
 
-(m) `compare_samples_to_distribution` function: Here, we 
+(m) `compare_samples_to_distribution` function: As a part of this function, we implement a method for comparing the distribution of the generated samples with the target function. Note that this is not done for all the cases that the user might implement, but only for a few test cases on the backend. This function uses the KS Test, which relies on a closed form CDF, for calculating the information loss when approximating the given target distribution with a different approxmiate distribution, which in this case is the distribution of the generated samples. 
 
-(n) `ars` function: Here, we 
+(n) `ars` function: This is the key sampling function, whihc pretty much calls the other function within itself to perform modular tasks - which made for the whole sampling process pretty smooth to debug in case of any intermediate errors. Samples that are generated are either accpeted or rejected - where the former are appended to a list that is returned to the user, while the latter are used to consecutively update the envelope so theat the envelope forms a tighter approximation to the target function. We tried implement batching, which generated multiple samples in one single iteration, but found ourselves out of time to implement the changes required in other functions to incorporate the presence of multiple accepted and multiple rejected samples in one single iteration of the algorithm. Overall, we discovered that each fo the samples accepted according to the criterion was correct, and the rejection rate of the sampling algorithm went down as the number of iterations of sampling iterations increased, since the envelope became a tighter and a better approximation for the target function. 
 
 # 2. File Structure and Modules
 
@@ -87,18 +87,19 @@ After installation, the package can be run simply with a code similar to the exa
 ```{python, eval=TRUE}
 import numpy as np
 import ars
+import matplotlib.pyplot as plt
 
 def gaussian(x):
     return np.exp(-0.5 * x**2)
 
-samples = ars.sars(gaussian, num_samples=10000, domain=(-5, 5), num_init_points=10)
+samples = ars.ars(gaussian, num_samples=10000, domain=(-5, 5), num_init_points=10)
 
 hist, bin_edges = np.histogram(samples, bins=50, density=True) 
 bin_centers = 0.5 * (bin_edges[:-1] + bin_edges[1:])
 true_density = np.exp(-0.5 * bin_centers**2) / np.sqrt(2 * np.pi)
 
 # Plotting
-plt.figure(figsize=(8, 6))
+plt.figure(figsize=(8, 6), dpi=300)
 plt.plot(bin_centers, true_density, label="True Gaussian", color='red', linewidth=2)
 plt.bar(bin_centers, hist, width=bin_edges[1] - bin_edges[0], label="Sampled Histogram", alpha=0.6)
 plt.xlabel('x')
@@ -122,6 +123,6 @@ The last series of unit tests were included in `test_utils.py`. Included in this
 \newpage
 
 # 5. Statement of Contribution
-* **Aparimit Kasliwal**:
-* **Treves Li**: Testing; installation and package setup
-* **Yuyang Wu**: 
+* **Aparimit Kasliwal**: Initial Functional Structure \& Ideation; AD Implementation using `jax`; Addressing numerical issues during computation
+* **Treves Li**: Testing; installation and package setup; Finalization of the Funtional Structure
+* **Yuyang Wu**: Initial Functional Structure; Algorithm Development
