Add some changes to qmd

--- a/final_project.qmd
+++ b/final_project.qmd
@@ -27,17 +27,13 @@ Our implementation of Adaptive Rejection Sampling, based on the `Gilkis et.al.` 
 
 (h) `init_points` function: This function calculates the intial points to be used during the sampling process which are offset by a parameter called the `threshold` which is to ensure avoiding any numerical issues when dealing with the computations for the given function. 
 
-(i) `check_overflow_underflow` function: Here, we specifcally check to see if there is any potential cause for an overflow or underflow to occur by comparing the numerical values that arise in the computation with the machine epsilon on one end and relative upper bounds for avoiding overflow on the other. 
+(i) `h_log` function: This function is used to implement caching for the log of the relevant function, and also implements underflow protection to prevent numerical issues during the sampling process. 
 
-(j) `h_log` function: This function is used to implement caching for the log of the relevant function, and also implements underflow protection to prevent numerical issues during the sampling process. 
+(j) `is_log_concave` function: This function is specifically built to check if a given function is log-concave in some particular domain. If not, this throws errors that help the user debug at any relevant point during the sampling process. At first we use this function to check the log-concaveness of the function, now we don't use this anymore and check it in the sampling process.
 
-(k) `h_cached` function: This function caches h values to avoid recomputing for the same x values, and thus helps reduce computational costs in case some calculations tend to be repeated.
+(k) `compare_samples_to_distribution` function: As a part of this function, we implement a method for comparing the distribution of the generated samples with the target function. Note that this is not done for all the cases that the user might implement, but only for a few test cases on the backend. This function uses the KS Test, which relies on a closed form CDF, for calculating the information loss when approximating the given target distribution with a different approxmiate distribution, which in this case is the distribution of the generated samples. 
 
-(l) `is_log_concave` function: This function is specifically built to check if a given function is log-concave in some particular domain. If not, this throws errors that help the user debug at any relevant point during the sampling process. 
-
-(m) `compare_samples_to_distribution` function: As a part of this function, we implement a method for comparing the distribution of the generated samples with the target function. Note that this is not done for all the cases that the user might implement, but only for a few test cases on the backend. This function uses the KS Test, which relies on a closed form CDF, for calculating the information loss when approximating the given target distribution with a different approxmiate distribution, which in this case is the distribution of the generated samples. 
-
-(n) `ars` function: This is the key sampling function, whihc pretty much calls the other function within itself to perform modular tasks - which made for the whole sampling process pretty smooth to debug in case of any intermediate errors. Samples that are generated are either accpeted or rejected - where the former are appended to a list that is returned to the user, while the latter are used to consecutively update the envelope so theat the envelope forms a tighter approximation to the target function. We tried implement batching, which generated multiple samples in one single iteration, but found ourselves out of time to implement the changes required in other functions to incorporate the presence of multiple accepted and multiple rejected samples in one single iteration of the algorithm. Overall, we discovered that each fo the samples accepted according to the criterion was correct, and the rejection rate of the sampling algorithm went down as the number of iterations of sampling iterations increased, since the envelope became a tighter and a better approximation for the target function. 
+(l) `ars` function: This is the key sampling function, whihc pretty much calls the other function within itself to perform modular tasks - which made for the whole sampling process pretty smooth to debug in case of any intermediate errors. Samples that are generated are either accpeted or rejected - where the former are appended to a list that is returned to the user, while the latter are used to consecutively update the envelope so theat the envelope forms a tighter approximation to the target function. We tried implement batching, which generated multiple samples in one single iteration, but found ourselves out of time to implement the changes required in other functions to incorporate the presence of multiple accepted and multiple rejected samples in one single iteration of the algorithm. Overall, we discovered that each of the samples accepted according to the criterion was correct, and the rejection rate of the sampling algorithm went down as the number of iterations of sampling iterations increased, since the envelope became a tighter and a better approximation for the target function. 
 
 # 2. File Structure and Modules
 
